# tert

./: .gitignore  AGENTS.md  COVERAGE_TRACKING_FIXED.md  Cargo.toml  LICENSE.txt  README.md  metadata.json  pyproject.toml  settings.json
docs/: COMPLETION_CHECKLIST.md  MIGRATION_SUMMARY.md  QUICK_START.md
scripts/: conftest.py  shellwrap.sh
src/: crypto.rs  did_agent.rs  fetch.rs  lib.rs  pq.rs  run_tests.rs  shellwrap.rs  vc.rs
src/tert/: __init__.py  __main__.py  artifacts.py  crypto.py  did_agent.py  fetch.py  pq.py  run_tests.py  shellwrap.py  vc.py
static/: custom.css  fts-highlight-config.js  search-highlight.js
tests/: conftest.py  test_artifacts.py  test_crypto.py  test_crypto_vector.py  test_did_agent.py  test_fetch.py  test_pq.py  test_run_tests.py  test_run_tests_cli.rs  test_search_highlight.py  test_shellcov.py  test_shellwrap.py  test_vc.py
tests/fixtures/: crypto_vectors.json  vc_interop.json  vc_interop.toml  vc_mldsa_interop.json  vc_mtc_interop.json
