[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "tert"
version = "0.1.0"
description = "Test Execution Report Tracker - Test runner harness with timestamped reports and SQLite replog"
readme = "README.md"
authors = [{name = "westurner"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]
keywords = ["testing", "test-runner", "reporting", "pytest", "cargo", "vite"]
requires-python = ">=3.8"
dependencies = [
    "pytest>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.0",
    #"cargo-insta>=1.0",
]

[project.scripts]
tert = "tert.run_tests:main"
tert-shellwrap = "tert.shellwrap:main"
tert-fetch = "tert.fetch:main"

[tool.maturin]
python-source = "src"
module-name = "tert._rust"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# python_files = ["test_*.py"]
# python_classes = ["Test*"]
# python_functions = ["test_*"]
addopts = "--strict-markers -v"
markers = [
    "requires_mock: marks tests as requiring subprocess mocking (deselect with '-m \"not requires_mock\"')",
]

[tool.coverage.run]
source = ["src/tert"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    #"def __repr__",
    "raise AssertionError",
    #"raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
